<resources>
    <string name="app_name">Playlist___Maker</string>
    <string name="main_menu_header">Playlist maker</string>
    <string name="btn_find_text">Поиск</string>
    <string name="btn_media_text">Медиатека</string>
    <string name="btn_settings_text">Настройки</string>
    <string name="as_header_text">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="mail_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="link">https://practicum.yandex.ru/android-developer/</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="uri_parse">mailto:</string>
    <string name="email">for_mail_box@mail.ru</string>
    <string name="send_intent_type">text/plain</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="btn_clear">X</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
</resources>